css color fix for mobile

--- a/Web/src/app/components/account/balance-info/balance-info.component.css
+++ b/Web/src/app/components/account/balance-info/balance-info.component.css
@@ -31,7 +31,7 @@
         font-size: 10px;
         font-weight: 100;
         letter-spacing: 0.3px;
-        color: #8c8c8c;
+        color: #bdbdbd;
     }
 
     .value{
