--- a/Web/src/app/components/util/left-menu/left-menu.component.css
+++ b/Web/src/app/components/util/left-menu/left-menu.component.css
@@ -1,6 +1,7 @@
 :host{
     width: 200px;
-    min-height: 100%;
+    height: 100%;
+    min-height: 570px;
     background-color: #1c1c1c;
     display: block;
     color: #ffffff;
