--- a/Web/src/app/components/account/user-info/user-info.component.css
+++ b/Web/src/app/components/account/user-info/user-info.component.css
@@ -42,12 +42,14 @@ expert-picture{
 
 .edit-profile{
     font-size: 10px;
-    font-weight: 100;
+    font-weight: 200;
     letter-spacing: 0.5px;
-    color: #979797;
+    color: #bdbdbd;
     text-decoration: underline;
     margin-top: 2px;
     margin-bottom: 2px;
+
+
 }
 
 
