--- a/Web/src/app/components/trade/portfolio/performance/trade-summary/trade-summary.component.html
+++ b/Web/src/app/components/trade/portfolio/performance/trade-summary/trade-summary.component.html
@@ -2,7 +2,7 @@
     <div class="box-header" fxLayout="row" fxLayoutAlign="center center" *ngIf="closedPosition">TRADES ({{closedPosition.orderCount}})</div>
     <div fxLayout="row" fxLayoutGap="21px">
         <div class="summary-column" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5px">
-            <div matTooltip="(Current Equity / 100,000USD) - 1">Total Profit</div>
+            <div matTooltip="(Current Equity / 100,000USD) - 1" #tooltipTotalProfit="matTooltip" (click)="tooltipTotalProfit.toggle()">Total Profit</div>
             <div class="trade-data">
                 <percentage-display *ngIf="advisor" [value]="advisor.totalProfitPercentage"></percentage-display>
             </div>
@@ -13,17 +13,17 @@
             </div>
         </div>
         <div class="summary-column" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5px">
-            <div matTooltip="# profitable trades / # total trades">Winning Trades</div>
+            <div matTooltip="# profitable trades / # total trades" #tooltipWinningTrades="matTooltip" (click)="tooltipWinningTrades.toggle()">Winning Trades</div>
             <div class="trade-data" *ngIf="closedPosition">{{closedPosition.successRate | percentageDisplay: 1}}</div>
             <div class="gap"></div>
-            <div matTooltip="Average return per closed trade">Avg. Return</div>
+            <div matTooltip="Average return per closed trade" #tooltipAvgReturns="matTooltip" (click)="tooltipAvgReturns.toggle()">Avg. Return</div>
             <div class="trade-data"><percentage-display *ngIf="advisor" [value]="advisor.averageReturn"></percentage-display></div>
         </div>
     </div>
     <div class="line-separator"></div>
     <div fxLayout="row" fxLayoutGap="21px">
         <div class="summary-column" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5px">
-            <div matTooltip="Maximum % loss in a day">Daily Drawdown</div>
+            <div matTooltip="Maximum % loss in a day" #tooltipDrawdown="matTooltip" (click)="tooltipDrawdown.toggle()">Daily Drawdown</div>
             <div class="trade-data" *ngIf="advisorPerformance">{{advisorPerformance.dailyDrawdown | percentageDisplay}}</div>
             <div class="gap"></div>
             <div>Avg. Trade Time</div>
