--- a/Web/src/app/components/home/home/home.component.html
+++ b/Web/src/app/components/home/home/home.component.html
@@ -72,7 +72,7 @@
 <section class="footer">
     <div class="footer-content" fxLayout="row" fxLayoutAlign="space-between center">
         <div>All rights reserved. Copyrights © 2018</div>
-        <a href="https://acutus.org" target="_blank">AUCTUS.ORG</a>
+        <a href="https://auctus.org" target="_blank">AUCTUS.ORG</a>
         <div class="terms-privacy" fxLayoutGap="6px">
             <a href="https://dl.auctus.org/Privacy_Policy.pdf" target="_blank">Privacy</a>
             <span>|</span>
