--- a/Web/src/app/components/trade/portfolio/history/history.component.html
+++ b/Web/src/app/components/trade/portfolio/history/history.component.html
@@ -11,7 +11,7 @@
       </div>
       <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="2px">
         <percentage-display [value]="positionResponse.averageReturn"></percentage-display>
-        <span>Avg.Returns</span>
+        <span>Avg. Return</span>
       </div>
     </div>
     <div class="returns" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="2px">
