Home remove beta reference

--- a/Web/src/app/components/home/top-image/top-image.component.html
+++ b/Web/src/app/components/home/top-image/top-image.component.html
@@ -1,17 +1,7 @@
 <img src="./assets/img/Img_Banner_1.png"/>
-<div fxLayout="column" class="top-platform-text" fxLayoutGap="10px" fxLayoutGap.gt-md="20px" fxLayoutGap.gt-sm="15px">
+<div fxLayout="column" class="top-platform-text" fxLayoutGap="45px" fxLayoutGap.gt-sm="80px">
     <span>Play virtual crypto trading to learn, compete, and share trading ideas.</span>
     <span class="highlight-text">It’s free!</span>
-</div>
-<div class="request-invite-box" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5px" fxLayoutGap.gt-md="20px" fxLayoutGap.gt-sm="15px">
-    <span>Auctus Trading is currently in private beta.</span>
-    <div class="table-button blue" onclick="VL.openModal()">REQUEST INVITE</div>
-    <span>or</span>
-    <div fxLayout="column" fxLayoutAlign="center center">
-        <span>Already have an invite?</span>
-        <div fxLayout="row">
-            <div class="link" (click)="signup()">Sign Up</div>&nbsp;/&nbsp;<div class="link" (click)="login()">Login</div>
-        </div>
-    </div>
+    <div class="table-button blue" (click)="signup()">JOIN NOW</div>
 </div>
 <div class="auctus-blue-bar"></div>
