--- a/Web/src/app/components/util/left-menu/left-menu.component.html
+++ b/Web/src/app/components/util/left-menu/left-menu.component.html
@@ -10,11 +10,8 @@
       <menu-item link="/trading-contest" name="Trading Contest" icon="award"></menu-item>
       <menu-item externalLink="https://blog.auctus.org/auctus-trading-faq-243735fff735" name="FAQ" icon="question-circle"></menu-item>
       <menu-item externalLink="https://discord.gg/jz7WgJR" name="Discord" [icon]="['fab','discord']"></menu-item>
-    </div>
-    <span *ngIf="isLogged()" class="signout" (click)="logout()" >
-      <fa-icon icon="sign-out-alt"></fa-icon>
-      LOGOUT
-    </span>  
+      <menu-item *ngIf="isLogged()" (click)="logout()" noLink="'true'" name="LOGOUT" icon="sign-out-alt"></menu-item>
+    </div> 
   </div>
 </div>
 
