--- a/Web/src/styles.scss
+++ b/Web/src/styles.scss
@@ -981,7 +981,8 @@ portfolio .header, open-positions .header, orders .header, history .header {
 portfolio button, open-positions button, orders button, history button {
   background-color: #999999;
   border: 0;
-  height: 23px;
+  min-height: 23px;
+  max-height: 44px;
   padding: 0 10px;
   letter-spacing: 1.8px;
   font-size: 9px;
